fix - Fix missing library files
---

We've fixed missing library files for OTP, QR code, and others.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Directory.Build.props
+++ b/public/Nitrocid.Addons/Directory.Build.props
@@ -26,6 +26,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\private\Nitrocid.LocaleChecker\Nitrocid.LocaleChecker.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\..\Nitrocid.Base\Nitrocid.Base.csproj" Private="false" />
+        <ProjectReference Include="..\..\Nitrocid.Core\Nitrocid.Core.csproj" Private="false" />
     </ItemGroup>
     <!-- Addon Platform Information End -->
 </Project>
