--- a/public/Nitrocid.Templates/templates/KSModVB/KSModVB.vbproj
+++ b/public/Nitrocid.Templates/templates/KSModVB/KSModVB.vbproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0-rc" />
+    <PackageReference Include="Nitrocid.Base" Version="0.2.0.0" />
   </ItemGroup>
 
 </Project>
